--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
  body{
   background-color: #3672d7 ;
   text-align: center;
-  font-family: 'Lato';
+  font-family: 'impact';
+   font-size: '18';
   font-weight: 900;
 }
 
