--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@ body{
   background-color: red;
   text-align: center;
   font-style: normal;
-  font-size: 50px;
-  font-color: white;
+  font-size: 35px;
+  text-color: white;
  font-family: 'futura', sans-serif;
 
 }
 
 .if{
-font-size: 40px;
-font-color: white;
+font-size: 30px;
+text-color: white;
 color: red;
 font-family: 'futura', sans-serif;
 }
