--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ display: none;
 
 h1 {
     text-decoration: underline;
-   background-color: red;
+   background-color: light-blue;
   text-align: center;
   font-style: normal;
   font-size: 70px;
@@ -15,7 +15,7 @@ h1 {
 }
 
 body{
-  background-color: red;
+  background-color: light-blue;
   text-align: center;
   font-style: normal;
   font-size: 35px;
