--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
    background-color: light-blue;
   text-align: center;
   font-style: normal;
-  font-size: 70px;
+  font-size: 120px;
   text-color: white;
  font-family: 'futura', sans-serif;
   
@@ -18,9 +18,15 @@ body{
   background-color: light-blue;
   text-align: center;
   font-style: normal;
-  font-size: 35px;
+  font-size: 40px;
   text-color: white;
  font-family: 'futura', sans-serif;
 
 }
 
+.if{
+font-size: 30px;
+text-color: white;
+color: red;
+font-family: 'futura', sans-serif;
+}
