--- a/style.css
+++ b/style.css
@@ -5,28 +5,26 @@ display: none;
 
 h1 {
     text-decoration: underline;
-   background-color: light-blue;
+   background-color: 	#1E90FF;
   text-align: center;
   font-style: normal;
   font-size: 120px;
-  text-color: white;
+
  font-family: 'futura', sans-serif;
   
 }
 
 body{
-  background-color: light-blue;
+	background-color: #1E90FF;
   text-align: center;
   font-style: normal;
   font-size: 40px;
-  text-color: white;
+  
  font-family: 'futura', sans-serif;
 
 }
 
 .if{
 font-size: 30px;
-text-color: white;
-color: red;
 font-family: 'futura', sans-serif;
 }
