--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
    background-color: 	#1E90FF;
   text-align: center;
   font-style: normal;
-  font-size: 120px;
+  font-size: 110;
 
  font-family: 'futura', sans-serif;
   
@@ -18,7 +18,7 @@ body{
 	background-color: #1E90FF;
   text-align: center;
   font-style: normal;
-  font-size: 40px;
+  font-size: 40;
   
  font-family: 'futura', sans-serif;
 
